--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alert and Prompt</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Menu Bar</title>
 </head>
+
 <body>
-    <script>
-        var name = prompt("ENter Name");
-        alert("Welcome" + name);
-        document.title="Welcome" + name;
-        document.write(window.confirm("Are you sure you want quit"));
-    </script>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">doll</a></li>
+        <li><a href="#">toy</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About Us</a></li>
+    </ul>
 </body>
 </html>
