--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <h1>
+        This is my page and mu name is SPM
+    </h1>
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">doll</a></li>
