--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <li><a href="#">Contact</a></li>
         <li><a href="#">About Us</a></li>
     </ul>
+    <img src="image/12.PNG" alt="">
 </body>
 </html>
